Agregado modulo de Geometria sexto

--- a/index.html
+++ b/index.html
@@ -16,40 +16,55 @@
 </head>
 <body class="min-h-screen flex flex-col items-center justify-center p-4 bg-[url('https://www.transparenttextures.com/patterns/graphy-dark.png')] text-white">
 
-    <div class="text-center mb-10">
+    <div class="text-center mb-10 mt-8">
         <h1 class="title-font text-5xl md:text-7xl text-yellow-400 mb-2 drop-shadow-lg">
             MATE-AVENTURA
         </h1>
         <p class="text-xl text-blue-200">Zona de Entrenamiento - Grado Sexto</p>
     </div>
 
-    <div class="grid md:grid-cols-2 gap-8 max-w-4xl w-full">
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl w-full px-4">
         
         <a href="Sexto/sistemas.html" class="group">
-            <div class="bg-orange-500 rounded-3xl p-1 shadow-[0_10px_0_rgb(154,52,18)] card-hover relative overflow-hidden">
-                <div class="bg-orange-600 rounded-[20px] p-8 h-full flex flex-col items-center text-center border-4 border-orange-400/50">
+            <div class="bg-orange-500 rounded-3xl p-1 shadow-[0_10px_0_rgb(154,52,18)] card-hover h-full">
+                <div class="bg-orange-600 rounded-[20px] p-6 h-full flex flex-col items-center text-center border-4 border-orange-400/50">
                     <div class="bg-white/20 p-4 rounded-full mb-4">
-                        <i class="fa-solid fa-scroll text-5xl text-white"></i>
+                        <i class="fa-solid fa-scroll text-4xl text-white"></i>
                     </div>
-                    <h2 class="title-font text-3xl mb-2">VIAJE AL PASADO</h2>
-                    <p class="text-orange-100 mb-6 font-bold">Romanos, Egipcios, Mayas y Chinos.</p>
-                    <span class="bg-white text-orange-600 px-6 py-2 rounded-full font-black shadow-lg group-hover:scale-110 transition-transform">
-                        JUGAR AHORA
+                    <h2 class="title-font text-2xl mb-2">VIAJE AL PASADO</h2>
+                    <p class="text-orange-100 mb-6 font-bold text-sm">Romanos, Egipcios y Mayas.</p>
+                    <span class="mt-auto bg-white text-orange-600 px-6 py-2 rounded-full font-black shadow-lg group-hover:scale-105 transition-transform text-sm">
+                        ENTRAR
                     </span>
                 </div>
             </div>
         </a>
 
         <a href="Sexto/binario.html" class="group">
-            <div class="bg-purple-600 rounded-3xl p-1 shadow-[0_10px_0_rgb(88,28,135)] card-hover relative overflow-hidden">
-                <div class="bg-purple-700 rounded-[20px] p-8 h-full flex flex-col items-center text-center border-4 border-purple-500/50">
+            <div class="bg-purple-600 rounded-3xl p-1 shadow-[0_10px_0_rgb(88,28,135)] card-hover h-full">
+                <div class="bg-purple-700 rounded-[20px] p-6 h-full flex flex-col items-center text-center border-4 border-purple-500/50">
                     <div class="bg-white/20 p-4 rounded-full mb-4">
-                        <i class="fa-solid fa-robot text-5xl text-white"></i>
+                        <i class="fa-solid fa-robot text-4xl text-white"></i>
                     </div>
-                    <h2 class="title-font text-3xl mb-2">CÓDIGO SECRETO</h2>
-                    <p class="text-purple-200 mb-6 font-bold">Sistema Binario y Computadoras.</p>
-                    <span class="bg-white text-purple-700 px-6 py-2 rounded-full font-black shadow-lg group-hover:scale-110 transition-transform">
-                        HACKEAR AHORA
+                    <h2 class="title-font text-2xl mb-2">CÓDIGO SECRETO</h2>
+                    <p class="text-purple-200 mb-6 font-bold text-sm">Binario y Computación.</p>
+                    <span class="mt-auto bg-white text-purple-700 px-6 py-2 rounded-full font-black shadow-lg group-hover:scale-105 transition-transform text-sm">
+                        ENTRAR
+                    </span>
+                </div>
+            </div>
+        </a>
+
+        <a href="Sexto/geometria.html" class="group">
+            <div class="bg-sky-500 rounded-3xl p-1 shadow-[0_10px_0_rgb(14,165,233)] card-hover h-full">
+                <div class="bg-sky-600 rounded-[20px] p-6 h-full flex flex-col items-center text-center border-4 border-sky-400/50">
+                    <div class="bg-white/20 p-4 rounded-full mb-4">
+                        <i class="fa-solid fa-compass-drafting text-4xl text-white"></i>
+                    </div>
+                    <h2 class="title-font text-2xl mb-2">ARQUITECTOS</h2>
+                    <p class="text-sky-100 mb-6 font-bold text-sm">Puntos, Rectas y Planos.</p>
+                    <span class="mt-auto bg-white text-sky-600 px-6 py-2 rounded-full font-black shadow-lg group-hover:scale-105 transition-transform text-sm">
+                        CONSTRUIR
                     </span>
                 </div>
             </div>
@@ -57,8 +72,8 @@
 
     </div>
 
-    <footer class="mt-16 text-slate-400 text-sm">
-        Prof. Luis Miguel Cabrera
+    <footer class="mt-16 text-slate-400 text-sm mb-8">
+        Prof. Luis Miguel Cabrera | I.E. Paulo VI
     </footer>
 
 </body>
